--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,6 @@
     "minimum-stability": "stable",
     "require": {},
     "autoload": {
-        "psr-4": {"ocean\\pay": "src/"}
+        "psr-4": {"ocean\\pay\\": "src/"}
     }
 }
