--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "ocean/pay",
     "description": "常用支付统一封装",
-    "type": "composer-plugin",
+    "type": "library",
     "authors": [
         {
             "name": "Mr.Hu",
